Packages_2024/gnutls_3.8.3/gnutls/gnutls.inc


function gnutls_record_recv_packet(session: Tgnutls_session_t; packet: Pgnutls_packet_t): Tssize_t; cdecl; external libgnutls;
procedure gnutls_packet_get(packet: Tgnutls_packet_t; data: Pgnutls_datum_t; sequence: pbyte); cdecl; external libgnutls;
procedure gnutls_packet_deinit(packet: Tgnutls_packet_t); cdecl; external libgnutls;

function gnutls_read(session: Pointer; data: Pointer; data_size: Tsize_t): integer; cdecl; external libgnutls name 'gnutls_record_recv';
function gnutls_write(session: Pointer; data: Pointer; data_size: Tsize_t): integer; cdecl; external libgnutls name 'gnutls_record_send';

function gnutls_record_recv_seq(session: Tgnutls_session_t; data: pointer; data_size: Tsize_t; seq: pbyte): Tssize_t; cdecl; external libgnutls;
function gnutls_record_overhead_size(session: Tgnutls_session_t): Tsize_t; cdecl; external libgnutls;
function gnutls_est_record_overhead_size(version: Tgnutls_protocol_t; cipher: Tgnutls_cipher_algorithm_t; mac: Tgnutls_mac_algorithm_t; comp: Tgnutls_compression_method_t; flags: dword): Tsize_t; cdecl; external libgnutls;
procedure gnutls_session_enable_compatibility_mode(session: Tgnutls_session_t); cdecl; external libgnutls;

procedure gnutls_record_set_max_empty_records(session, x: longint); unimplemented;

function gnutls_record_can_use_length_hiding(session: Tgnutls_session_t): dword; cdecl; external libgnutls;
function gnutls_record_get_direction(session: Tgnutls_session_t): longint; cdecl; external libgnutls;
function gnutls_record_get_max_size(session: Tgnutls_session_t): Tsize_t; cdecl; external libgnutls;
function gnutls_record_set_max_size(session: Tgnutls_session_t; size: Tsize_t): Tssize_t; cdecl; external libgnutls;
function gnutls_record_set_max_recv_size(session: Tgnutls_session_t; size: Tsize_t): Tssize_t; cdecl; external libgnutls;
function gnutls_record_check_pending(session: Tgnutls_session_t): Tsize_t; cdecl; external libgnutls;
function gnutls_record_check_corked(session: Tgnutls_session_t): Tsize_t; cdecl; external libgnutls;
function gnutls_record_get_max_early_data_size(session: Tgnutls_session_t): Tsize_t; cdecl; external libgnutls;
function gnutls_record_set_max_early_data_size(session: Tgnutls_session_t; size: Tsize_t): longint; cdecl; external libgnutls;
function gnutls_record_send_early_data(session: Tgnutls_session_t; data: pointer; length: Tsize_t): Tssize_t; cdecl; external libgnutls;
function gnutls_record_recv_early_data(session: Tgnutls_session_t; data: pointer; data_size: Tsize_t): Tssize_t; cdecl; external libgnutls;
procedure gnutls_session_force_valid(session: Tgnutls_session_t); cdecl; external libgnutls;
function gnutls_prf(session: Tgnutls_session_t; label_size: Tsize_t; _label: pchar; server_random_first: longint; extra_size: Tsize_t; extra: pchar; outsize: Tsize_t; out_: pchar): longint; cdecl; external libgnutls;
function gnutls_prf_rfc5705(session: Tgnutls_session_t; label_size: Tsize_t; _label: pchar; context_size: Tsize_t; context: pchar; outsize: Tsize_t; out_: pchar): longint; cdecl; external libgnutls;
function gnutls_prf_early(session: Tgnutls_session_t; label_size: Tsize_t; _label: pchar; context_size: Tsize_t; context: pchar; outsize: Tsize_t; out_: pchar): longint; cdecl; external libgnutls;
function gnutls_prf_raw(session: Tgnutls_session_t; label_size: Tsize_t; _label: pchar; seed_size: Tsize_t; seed: pchar; outsize: Tsize_t; out_: pchar): longint; cdecl; external libgnutls;

type
  Pgnutls_server_name_type_t = ^Tgnutls_server_name_type_t;
  Tgnutls_server_name_type_t = longint;

const
  GNUTLS_NAME_DNS = 1;

function gnutls_server_name_set(session: Tgnutls_session_t; _type: Tgnutls_server_name_type_t; name: pointer; name_length: Tsize_t): longint; cdecl; external libgnutls;
function gnutls_server_name_get(session: Tgnutls_session_t; data: pointer; data_length: Psize_t; _type: Pdword; indx: dword): longint; cdecl; external libgnutls;
function gnutls_heartbeat_get_timeout(session: Tgnutls_session_t): dword; cdecl; external libgnutls;
procedure gnutls_heartbeat_set_timeouts(session: Tgnutls_session_t; retrans_timeout: dword; total_timeout: dword); cdecl; external libgnutls;

const
  GNUTLS_HB_PEER_ALLOWED_TO_SEND = 1;
  GNUTLS_HB_PEER_NOT_ALLOWED_TO_SEND = 1 shl 1;

procedure gnutls_heartbeat_enable(session: Tgnutls_session_t; _type: dword); cdecl; external libgnutls;

const
  GNUTLS_HB_LOCAL_ALLOWED_TO_SEND = 1 shl 2;

function gnutls_heartbeat_allowed(session: Tgnutls_session_t; _type: dword): dword; cdecl; external libgnutls;
function gnutls_safe_renegotiation_status(session: Tgnutls_session_t): dword; cdecl; external libgnutls;
function gnutls_session_ext_master_secret_status(session: Tgnutls_session_t): dword; cdecl; external libgnutls;
function gnutls_session_etm_status(session: Tgnutls_session_t): dword; cdecl; external libgnutls;

type
  Pgnutls_session_flags_t = ^Tgnutls_session_flags_t;
  Tgnutls_session_flags_t = longint;

const
  GNUTLS_SFLAGS_SAFE_RENEGOTIATION = 1;
  GNUTLS_SFLAGS_EXT_MASTER_SECRET = 1 shl 1;
  GNUTLS_SFLAGS_ETM = 1 shl 2;
  GNUTLS_SFLAGS_HB_LOCAL_SEND = 1 shl 3;
  GNUTLS_SFLAGS_HB_PEER_SEND = 1 shl 4;
  GNUTLS_SFLAGS_FALSE_START = 1 shl 5;
  GNUTLS_SFLAGS_RFC7919 = 1 shl 6;
  GNUTLS_SFLAGS_SESSION_TICKET = 1 shl 7;
  GNUTLS_SFLAGS_POST_HANDSHAKE_AUTH = 1 shl 8;
  GNUTLS_SFLAGS_EARLY_START = 1 shl 9;
  GNUTLS_SFLAGS_EARLY_DATA = 1 shl 10;
  GNUTLS_SFLAGS_CLI_REQUESTED_OCSP = 1 shl 11;
  GNUTLS_SFLAGS_SERV_REQUESTED_OCSP = 1 shl 12;

function gnutls_session_get_flags(session: Tgnutls_session_t): dword; cdecl; external libgnutls;

type
  Pgnutls_supplemental_data_format_type_t = ^Tgnutls_supplemental_data_format_type_t;
  Tgnutls_supplemental_data_format_type_t = longint;

const
  GNUTLS_SUPPLEMENTAL_UNKNOWN = 0;

function gnutls_supplemental_get_name(_type: Tgnutls_supplemental_data_format_type_t): pchar; cdecl; external libgnutls;
function gnutls_session_ticket_key_generate(key: Pgnutls_datum_t): longint; cdecl; external libgnutls;
function gnutls_session_ticket_enable_client(session: Tgnutls_session_t): longint; cdecl; external libgnutls;
function gnutls_session_ticket_enable_server(session: Tgnutls_session_t; key: Pgnutls_datum_t): longint; cdecl; external libgnutls;
function gnutls_session_ticket_send(session: Tgnutls_session_t; nr: dword; flags: dword): longint; cdecl; external libgnutls;

type
  Pgnutls_srtp_profile_t = ^Tgnutls_srtp_profile_t;
  Tgnutls_srtp_profile_t = longint;

const
  GNUTLS_SRTP_AES128_CM_HMAC_SHA1_80 = $0001;
  GNUTLS_SRTP_AES128_CM_HMAC_SHA1_32 = $0002;
  GNUTLS_SRTP_NULL_HMAC_SHA1_80 = $0005;
  GNUTLS_SRTP_NULL_HMAC_SHA1_32 = $0006;
  GNUTLS_SRTP_AEAD_AES_128_GCM = $0007;
  GNUTLS_SRTP_AEAD_AES_256_GCM = $0008;

function gnutls_srtp_set_profile(session: Tgnutls_session_t; profile: Tgnutls_srtp_profile_t): longint; cdecl; external libgnutls;
function gnutls_srtp_set_profile_direct(session: Tgnutls_session_t; profiles: pchar; err_pos: PPchar): longint; cdecl; external libgnutls;
function gnutls_srtp_get_selected_profile(session: Tgnutls_session_t; profile: Pgnutls_srtp_profile_t): longint; cdecl; external libgnutls;
function gnutls_srtp_get_profile_name(profile: Tgnutls_srtp_profile_t): pchar; cdecl; external libgnutls;
function gnutls_srtp_get_profile_id(name: pchar; profile: Pgnutls_srtp_profile_t): longint; cdecl; external libgnutls;
function gnutls_srtp_get_keys(session: Tgnutls_session_t; key_material: pointer; key_material_size: dword; client_key: Pgnutls_datum_t; client_salt: Pgnutls_datum_t;
  server_key: Pgnutls_datum_t; server_salt: Pgnutls_datum_t): longint; cdecl; external libgnutls;
function gnutls_srtp_set_mki(session: Tgnutls_session_t; mki: Pgnutls_datum_t): longint; cdecl; external libgnutls;
function gnutls_srtp_get_mki(session: Tgnutls_session_t; mki: Pgnutls_datum_t): longint; cdecl; external libgnutls;
function gnutls_compress_certificate_get_selected_method(session: Tgnutls_session_t): Tgnutls_compression_method_t; cdecl; external libgnutls;
function gnutls_compress_certificate_set_methods(session: Tgnutls_session_t; methods: Pgnutls_compression_method_t; methods_len: Tsize_t): longint; cdecl; external libgnutls;

type
  Pgnutls_alpn_flags_t = ^Tgnutls_alpn_flags_t;
  Tgnutls_alpn_flags_t = longint;

const
  GNUTLS_ALPN_MANDATORY = 1;
  GNUTLS_ALPN_SERVER_PRECEDENCE = 1 shl 1;

const
  GNUTLS_ALPN_MAND = GNUTLS_ALPN_MANDATORY;

function gnutls_alpn_get_selected_protocol(session: Tgnutls_session_t; protocol: Pgnutls_datum_t): longint; cdecl; external libgnutls;
function gnutls_alpn_set_protocols(session: Tgnutls_session_t; protocols: Pgnutls_datum_t; protocols_size: dword; flags: dword): longint; cdecl; external libgnutls;
function gnutls_key_generate(key: Pgnutls_datum_t; key_size: dword): longint; cdecl; external libgnutls;

const
  GNUTLS_PRIORITY_INIT_DEF_APPEND = 1;

function gnutls_priority_init(priority_cache: Pgnutls_priority_t; priorities: pchar; err_pos: PPchar): longint; cdecl; external libgnutls;
function gnutls_priority_init2(priority_cache: Pgnutls_priority_t; priorities: pchar; err_pos: PPchar; flags: dword): longint; cdecl; external libgnutls;
procedure gnutls_priority_deinit(priority_cache: Tgnutls_priority_t); cdecl; external libgnutls;
function gnutls_priority_get_cipher_suite_index(pcache: Tgnutls_priority_t; idx: dword; sidx: Pdword): longint; cdecl; external libgnutls;

const
  GNUTLS_PRIORITY_LIST_INIT_KEYWORDS = 1;
  GNUTLS_PRIORITY_LIST_SPECIAL = 2;
